--- a/HALOSDecoder/HALOSDecoder.csproj
+++ b/HALOSDecoder/HALOSDecoder.csproj
@@ -61,6 +61,9 @@
     <Content Include="KEYS.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="PADS.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BouncyCastle">
