Refactor a bit to allow for new decryption modes
DataLoader now handles loading data from text files, and the actual
decryption has been moved to MassDecrypter

--- a/HALOSDecoder/HALOSDecoder.csproj
+++ b/HALOSDecoder/HALOSDecoder.csproj
@@ -43,8 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CastleCipher.cs" />
+    <Compile Include="DataLoader.cs" />
     <Compile Include="DecryptResult.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="MassDecrypter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
